improved calculation algorithm for 2-3x speedup